--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -12,6 +12,13 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[skip ci]') && github.ref == 'refs/heads/main'"
     steps:
       - uses: actions/checkout@v1
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v1
+        with:
+          node-version: 18.x
+      - name: Install
+        working-directory: functions
+        run: npm install
       - name: Deploy
         uses: w9jds/firebase-action@master
         with:
